--- a/index.html
+++ b/index.html
@@ -1,87 +1,309 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Totales</title>
-	<!-- Importar Materialize CSS -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
-	<style>
-    	body {
-        	padding: 20px;
-    	}
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Visualización de Datos</title>
+    <!-- Importar Materialize CSS -->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+      }
 
-    	.table-container {
-        	display: flex;
-        	justify-content: space-around;
-        	flex-wrap: wrap;
-    	}
+      .tabs-container {
+        margin: 20px;
+      }
 
-    	.table-container .col {
-        	flex: 1 1 45%;
-        	margin: 10px;
-    	}
+      .tabs {
+        margin-bottom: 20px;
+      }
 
-    	h2 {
-        	color: #009879;
-        	text-align: center;
-    	}
+      .tab-content {
+        display: none;
+      }
 
-    	.styled-table th {
-        	background-color: #009879;
-        	color: #ffffff;
-    	}
+      .tab-content.active {
+        display: block;
+      }
 
-    	.styled-table tbody tr:nth-child(even) {
-        	background-color: #f3f3f3;
-    	}
+      h2 {
+        text-align: center;
+        color: #009879;
+      }
 
-    	.styled-table tbody tr:hover {
-        	background-color: #f1f1f1;
-    	}
-	</style>
-</head>
-<body>
-	<div class="container">
-    	<div class="table-container">
-        	<div class="col">
-            	<h2>Totales 40mm</h2>
-            	<div id="table40mm"></div>
-        	</div>
-        	<div class="col">
-            	<h2>Totales 32mm</h2>
-            	<div id="table32mm"></div>
-        	</div>
-    	</div>
-	</div>
+      .user-content {
+        display: none;
+      }
 
-	<script>
-    	fetch('https://script.google.com/macros/s/AKfycbxbkYMqmzaE22UnjyShkUQ9U0xxpdpJReN78MpyI842JzIgQOslSC9XZCLPIzvkYJbtAQ/exec')
-        	.then(response => response.json())
-        	.then(data => {
-            	let output40mm = '<table class="styled-table highlight"><thead><tr><th>Producto</th><th>Cantidad</th></tr></thead><tbody>';
-            	let output32mm = '<table class="styled-table highlight"><thead><tr><th>Producto</th><th>Cantidad</th></tr></thead><tbody>';
+      .user-content.active {
+        display: block;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container tabs-container">
+      <ul class="tabs">
+        <li class="tab col s3">
+          <a href="#totales" class="active">Totales</a>
+        </li>
+        <li class="tab col s3"><a href="#individuales">Individuales</a></li>
+      </ul>
 
-            	// Procesar los datos de 40mm
-            	data.pedido.totales["40mm"].items.forEach(item => {
-                	output40mm += `<tr><td>${item.nombre}</td><td>${item.cantidad}</td></tr>`;
-            	});
-            	output40mm += '</tbody></table>';
+      <div id="totales" class="tab-content active">
+        <h2>Totales</h2>
+        <!-- Aquí inserta el contenido HTML del documento "Totales" -->
+        <!DOCTYPE html>
+        <html lang="es">
+          <head>
+            <meta charset="UTF-8" />
+            <meta
+              name="viewport"
+              content="width=device-width, initial-scale=1.0"
+            />
+            <title>Totales</title>
+            <!-- Importar Materialize CSS -->
+            <link
+              href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+              rel="stylesheet"
+            />
+            <style>
+              body {
+                padding: 20px;
+              }
 
-            	// Procesar los datos de 32mm
-            	data.pedido.totales["32mm"].items.forEach(item => {
-                	output32mm += `<tr><td>${item.nombre}</td><td>${item.cantidad}</td></tr>`;
-            	});
-            	output32mm += '</tbody></table>';
+              .table-container {
+                display: flex;
+                justify-content: space-around;
+                flex-wrap: wrap;
+              }
 
-            	document.getElementById('table40mm').innerHTML = output40mm;
-            	document.getElementById('table32mm').innerHTML = output32mm;
-        	});
-	</script>
-	<!-- Importar Materialize JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-</body>
+              .table-container .col {
+                flex: 1 1 45%;
+                margin: 10px;
+              }
+
+              h2 {
+                color: #009879;
+                text-align: center;
+              }
+
+              .styled-table th {
+                background-color: #009879;
+                color: #ffffff;
+              }
+
+              .styled-table tbody tr:nth-child(even) {
+                background-color: #f3f3f3;
+              }
+
+              .styled-table tbody tr:hover {
+                background-color: #f1f1f1;
+              }
+            </style>
+          </head>
+          <body>
+            <div class="container">
+              <div class="table-container">
+                <div class="col">
+                  <h2>Totales 40mm</h2>
+                  <div id="table40mm"></div>
+                </div>
+                <div class="col">
+                  <h2>Totales 32mm</h2>
+                  <div id="table32mm"></div>
+                </div>
+              </div>
+            </div>
+
+            <script>
+              document.addEventListener("DOMContentLoaded", function () {
+                // Inicializar las pestañas
+                const tabs = document.querySelectorAll(".tabs a");
+                const tabContents = document.querySelectorAll(".tab-content");
+
+                tabs.forEach((tab) => {
+                  tab.addEventListener("click", function (e) {
+                    e.preventDefault();
+
+                    tabs.forEach((t) => t.classList.remove("active"));
+                    tabContents.forEach((tc) => tc.classList.remove("active"));
+
+                    document
+                      .querySelector(tab.getAttribute("href"))
+                      .classList.add("active");
+                    tab.classList.add("active");
+                  });
+                });
+
+                // Inicializar el select de Materialize
+                const selectElems = document.querySelectorAll("select");
+                M.FormSelect.init(selectElems);
+
+                // URL del Google Sheet publicado como JSON
+                const sheetURL =
+                  "https://spreadsheets.google.com/feeds/list/1WkwbzfnvP4EDC2BBETm5kvoEv4JPrzfOa8ThHgPDuxQ/od6/public/values?alt=json";
+
+                // Función para obtener datos del Google Sheet
+                fetch(sheetURL)
+                  .then((response) => response.json())
+                  .then((data) => {
+                    const entries = data.feed.entry;
+                    const userSelect = document.getElementById("user-select");
+                    const userContentContainer = document.getElementById(
+                      "user-content-container"
+                    );
+
+                    entries.forEach((entry) => {
+                      const userName = entry["gsx$usuario"].$t; // Nombre del usuario
+                      const userContent = entry["gsx$contenido"].$t; // Contenido del usuario
+
+                      // Crear una opción en el desplegable
+                      const option = document.createElement("option");
+                      option.value = userName.toLowerCase();
+                      option.textContent = userName;
+                      userSelect.appendChild(option);
+
+                      // Crear un div para el contenido del usuario
+                      const userDiv = document.createElement("div");
+                      userDiv.id = userName.toLowerCase();
+                      userDiv.className = "user-content";
+                      userDiv.innerHTML = `<h3>Información de ${userName}</h3><p>${userContent}</p>`;
+                      userContentContainer.appendChild(userDiv);
+                    });
+
+                    // Actualizar el select de Materialize
+                    M.FormSelect.init(userSelect);
+
+                    // Filtrar contenido por usuario
+                    userSelect.addEventListener("change", function () {
+                      const selectedUser = this.value;
+
+                      // Ocultar todos los contenidos de usuario
+                      document
+                        .querySelectorAll(".user-content")
+                        .forEach((content) =>
+                          content.classList.remove("active")
+                        );
+
+                      // Mostrar el contenido del usuario seleccionado
+                      if (selectedUser) {
+                        document
+                          .getElementById(selectedUser)
+                          .classList.add("active");
+                      }
+                    });
+                  })
+                  .catch((error) =>
+                    console.error("Error al obtener los datos:", error)
+                  );
+              });
+            </script>
+            <!-- Importar Materialize JS -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+          </body>
+        </html>
+      </div>
+
+      <div id="individuales" class="tab-content">
+        <h2>Individuales</h2>
+        <!-- Desplegable para seleccionar el usuario -->
+        <div class="input-field col s12">
+          <select id="user-select">
+            <option value="" disabled selected>Selecciona un usuario</option>
+            <!-- Opciones generadas dinámicamente desde Google Sheets -->
+          </select>
+          <label>Seleccionar Usuario</label>
+        </div>
+
+        <!-- Contenido para cada usuario (generado dinámicamente) -->
+        <div id="user-content-container"></div>
+      </div>
+    </div>
+
+    <!-- Importar Materialize JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        // Inicializar las pestañas
+        const tabs = document.querySelectorAll(".tabs a");
+        const tabContents = document.querySelectorAll(".tab-content");
+
+        tabs.forEach((tab) => {
+          tab.addEventListener("click", function (e) {
+            e.preventDefault();
+
+            tabs.forEach((t) => t.classList.remove("active"));
+            tabContents.forEach((tc) => tc.classList.remove("active"));
+
+            document
+              .querySelector(tab.getAttribute("href"))
+              .classList.add("active");
+            tab.classList.add("active");
+          });
+        });
+
+        // Inicializar el select de Materialize
+        const selectElems = document.querySelectorAll("select");
+        M.FormSelect.init(selectElems);
+
+        // URL del Google Sheet publicado como JSON
+        const sheetURL =
+          "https://spreadsheets.google.com/feeds/list/1WkwbzfnvP4EDC2BBETm5kvoEv4JPrzfOa8ThHgPDuxQ/od6/public/values?alt=json";
+
+        // Función para obtener datos del Google Sheet
+        fetch(sheetURL)
+          .then((response) => response.json())
+          .then((data) => {
+            const entries = data.feed.entry;
+            const userSelect = document.getElementById("user-select");
+            const userContentContainer = document.getElementById(
+              "user-content-container"
+            );
+
+            entries.forEach((entry) => {
+              const userName = entry.gsx$usuario.$t; // Nombre del usuario
+              const userContent = entry.gsx$contenido.$t; // Contenido del usuario
+
+              // Crear una opción en el desplegable
+              const option = document.createElement("option");
+              option.value = userName.toLowerCase();
+              option.textContent = userName;
+              userSelect.appendChild(option);
+
+              // Crear un div para el contenido del usuario
+              const userDiv = document.createElement("div");
+              userDiv.id = userName.toLowerCase();
+              userDiv.className = "user-content";
+              userDiv.innerHTML = `<h3>Información de ${userName}</h3><p>${userContent}</p>`;
+              userContentContainer.appendChild(userDiv);
+            });
+
+            // Actualizar el select de Materialize
+            M.FormSelect.init(userSelect);
+
+            // Filtrar contenido por usuario
+            userSelect.addEventListener("change", function () {
+              const selectedUser = this.value;
+
+              // Ocultar todos los contenidos de usuario
+              document
+                .querySelectorAll(".user-content")
+                .forEach((content) => content.classList.remove("active"));
+
+              // Mostrar el contenido del usuario seleccionado
+              if (selectedUser) {
+                document.getElementById(selectedUser).classList.add("active");
+              }
+            });
+          })
+          .catch((error) =>
+            console.error("Error al obtener los datos:", error)
+          );
+      });
+    </script>
+  </body>
 </html>
-
-
-
