--- a/index.html
+++ b/index.html
@@ -1,284 +1,109 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Visualización de Datos</title>
-    <!-- Importar Materialize CSS -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-      rel="stylesheet"
-    />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pedidos de Usuarios</title>
+    <!-- Materialize CSS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
     <style>
-      body {
-        font-family: Arial, sans-serif;
-      }
-
-      .tabs-container {
-        margin: 20px;
-      }
-
-      .tabs {
-        margin-bottom: 20px;
-      }
-
-      .tab-content {
-        display: none;
-      }
-
-      .tab-content.active {
-        display: block;
-      }
-
-      h2 {
-        text-align: center;
-        color: #009879;
-      }
-
-      .user-content {
-        display: none;
-      }
-
-      .user-content.active {
-        display: block;
-      }
+        .user-content {
+            display: none;
+        }
+        .user-content.active {
+            display: block;
+        }
     </style>
-  </head>
-  <body>
-    <div class="container tabs-container">
-      <ul class="tabs">
-        <li class="tab col s3">
-          <a href="#totales" class="active">Totales</a>
-        </li>
-        <li class="tab col s3"><a href="#individuales">Individuales</a></li>
-      </ul>
+</head>
+<body>
+    <div class="container">
+        <h2>Seleccione un Usuario</h2>
+        <div class="input-field col s12">
+            <select id="user-select">
+                <option value="" disabled selected>Elige un usuario</option>
+            </select>
+            <label>Usuario</label>
+        </div>
 
-      <div id="totales" class="tab-content active">
-        <h2>Totales</h2>
-        <!-- Aquí inserta el contenido HTML del documento "Totales" -->
-        <!DOCTYPE html>
-        <html lang="es">
-          <head>
-            <meta charset="UTF-8" />
-            <meta
-              name="viewport"
-              content="width=device-width, initial-scale=1.0"
-            />
-            <title>Totales</title>
-            <!-- Importar Materialize CSS -->
-            <link
-              href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-              rel="stylesheet"
-            />
-            <style>
-              body {
-                padding: 20px;
-              }
+        <div id="user-content-container"></div>
+    </div>
 
-              .table-container {
-                display: flex;
-                justify-content: space-around;
-                flex-wrap: wrap;
-              }
+    <!-- Materialize JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Inicializar el select de Materialize
+            const selectElems = document.querySelectorAll('select');
+            M.FormSelect.init(selectElems);
 
-              .table-container .col {
-                flex: 1 1 45%;
-                margin: 10px;
-              }
+            // URL del Google Apps Script que devuelve la información
+            const apiURL = 'https://script.google.com/macros/s/AKfycbxbkYMqmzaE22UnjyShkUQ9U0xxpdpJReN78MpyI842JzIgQOslSC9XZCLPIzvkYJbtAQ/exec';
 
-              h2 {
-                color: #009879;
-                text-align: center;
-              }
+            fetch(apiURL)
+                .then(response => response.json())
+                .then(data => {
+                    const userSelect = document.getElementById('user-select');
+                    const userContentContainer = document.getElementById('user-content-container');
 
-              .styled-table th {
-                background-color: #009879;
-                color: #ffffff;
-              }
+                    // Añadir las opciones al desplegable
+                    Object.keys(data).forEach(userName => {
+                        const option = document.createElement('option');
+                        option.value = userName.toLowerCase();
+                        option.textContent = userName;
+                        userSelect.appendChild(option);
 
-              .styled-table tbody tr:nth-child(even) {
-                background-color: #f3f3f3;
-              }
+                        // Crear una tabla para cada usuario
+                        const userDiv = document.createElement('div');
+                        userDiv.id = userName.toLowerCase();
+                        userDiv.className = 'user-content';
 
-              .styled-table tbody tr:hover {
-                background-color: #f1f1f1;
-              }
-            </style>
-          </head>
-          <body>
-            <div class="container">
-              <div class="table-container">
-                <div class="col">
-                  <h2>Totales 40mm</h2>
-                  <div id="table40mm"></div>
-                </div>
-                <div class="col">
-                  <h2>Totales 32mm</h2>
-                  <div id="table32mm"></div>
-                </div>
-              </div>
-            </div>
+                        let tableHTML = `
+                            <h3>Pedidos de ${userName}</h3>
+                            <table class="striped">
+                                <thead>
+                                    <tr>
+                                        <th>Medida</th>
+                                        <th>Nombre</th>
+                                        <th>Cantidad</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                        `;
 
-            <script>
-              document.addEventListener("DOMContentLoaded", function () {
-                const selectElems = document.querySelectorAll("select");
-                M.FormSelect.init(selectElems);
+                        data[userName].forEach(item => {
+                            tableHTML += `
+                                <tr>
+                                    <td>${item['Medida']}</td>
+                                    <td>${item['Nombre']}</td>
+                                    <td>${item['Cantidad']}</td>
+                                </tr>
+                            `;
+                        });
 
-                const apiURL =
-                  "https://script.google.com/macros/s/AKfycbxbkYMqmzaE22UnjyShkUQ9U0xxpdpJReN78MpyI842JzIgQOslSC9XZCLPIzvkYJbtAQ/exec?sheet=Individuales";
-
-                fetch(apiURL)
-                  .then((response) => response.json())
-                  .then((data) => {
-                    const userSelect = document.getElementById("user-select");
-                    const userContentContainer = document.getElementById(
-                      "user-content-container"
-                    );
-
-                    data.forEach((entry) => {
-                      const userName = entry["usuario"];
-                      const userContent = entry["contenido"];
-
-                      // Crear una opción en el desplegable
-                      const option = document.createElement("option");
-                      option.value = userName.toLowerCase();
-                      option.textContent = userName;
-                      userSelect.appendChild(option);
-
-                      // Crear un div para el contenido del usuario
-                      const userDiv = document.createElement("div");
-                      userDiv.id = userName.toLowerCase();
-                      userDiv.className = "user-content";
-                      userDiv.innerHTML = `<h3>Información de ${userName}</h3><p>${userContent}</p>`;
-                      userContentContainer.appendChild(userDiv);
+                        tableHTML += `</tbody></table>`;
+                        userDiv.innerHTML = tableHTML;
+                        userContentContainer.appendChild(userDiv);
                     });
 
                     // Actualizar el select de Materialize
                     M.FormSelect.init(userSelect);
 
-                    userSelect.addEventListener("change", function () {
-                      const selectedUser = this.value;
+                    // Mostrar contenido según la selección del usuario
+                    userSelect.addEventListener('change', function() {
+                        const selectedUser = this.value;
 
-                      document
-                        .querySelectorAll(".user-content")
-                        .forEach((content) =>
-                          content.classList.remove("active")
-                        );
+                        // Ocultar todos los contenidos de usuario
+                        document.querySelectorAll('.user-content').forEach(content => content.classList.remove('active'));
 
-                      if (selectedUser) {
-                        document
-                          .getElementById(selectedUser)
-                          .classList.add("active");
-                      }
+                        // Mostrar el contenido del usuario seleccionado
+                        if (selectedUser) {
+                            document.getElementById(selectedUser).classList.add('active');
+                        }
                     });
-                  })
-                  .catch((error) =>
-                    console.error("Error al obtener los datos:", error)
-                  );
-              });
-            </script>
-            <!-- Importar Materialize JS -->
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-          </body>
-        </html>
-      </div>
-
-      <div id="individuales" class="tab-content">
-        <h2>Individuales</h2>
-        <!-- Desplegable para seleccionar el usuario -->
-        <div class="input-field col s12">
-          <select id="user-select">
-            <option value="" disabled selected>Selecciona un usuario</option>
-            <!-- Opciones generadas dinámicamente desde Google Sheets -->
-          </select>
-          <label>Seleccionar Usuario</label>
-        </div>
-
-        <!-- Contenido para cada usuario (generado dinámicamente) -->
-        <div id="user-content-container"></div>
-      </div>
-    </div>
-
-    <!-- Importar Materialize JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        // Inicializar las pestañas
-        const tabs = document.querySelectorAll(".tabs a");
-        const tabContents = document.querySelectorAll(".tab-content");
-
-        tabs.forEach((tab) => {
-          tab.addEventListener("click", function (e) {
-            e.preventDefault();
-
-            tabs.forEach((t) => t.classList.remove("active"));
-            tabContents.forEach((tc) => tc.classList.remove("active"));
-
-            document
-              .querySelector(tab.getAttribute("href"))
-              .classList.add("active");
-            tab.classList.add("active");
-          });
+                })
+                .catch(error => console.error('Error al obtener los datos:', error));
         });
-
-        // Inicializar el select de Materialize
-        const selectElems = document.querySelectorAll("select");
-        M.FormSelect.init(selectElems);
-
-        // URL del Google Sheet publicado como JSON
-        const sheetURL =
-          "https://spreadsheets.google.com/feeds/list/1WkwbzfnvP4EDC2BBETm5kvoEv4JPrzfOa8ThHgPDuxQ/od6/public/values?alt=json";
-
-        // Función para obtener datos del Google Sheet
-        fetch(sheetURL)
-          .then((response) => response.json())
-          .then((data) => {
-            const entries = data.feed.entry;
-            const userSelect = document.getElementById("user-select");
-            const userContentContainer = document.getElementById(
-              "user-content-container"
-            );
-
-            entries.forEach((entry) => {
-              const userName = entry.gsx$usuario.$t; // Nombre del usuario
-              const userContent = entry.gsx$contenido.$t; // Contenido del usuario
-
-              // Crear una opción en el desplegable
-              const option = document.createElement("option");
-              option.value = userName.toLowerCase();
-              option.textContent = userName;
-              userSelect.appendChild(option);
-
-              // Crear un div para el contenido del usuario
-              const userDiv = document.createElement("div");
-              userDiv.id = userName.toLowerCase();
-              userDiv.className = "user-content";
-              userDiv.innerHTML = `<h3>Información de ${userName}</h3><p>${userContent}</p>`;
-              userContentContainer.appendChild(userDiv);
-            });
-
-            // Actualizar el select de Materialize
-            M.FormSelect.init(userSelect);
-
-            // Filtrar contenido por usuario
-            userSelect.addEventListener("change", function () {
-              const selectedUser = this.value;
-
-              // Ocultar todos los contenidos de usuario
-              document
-                .querySelectorAll(".user-content")
-                .forEach((content) => content.classList.remove("active"));
-
-              // Mostrar el contenido del usuario seleccionado
-              if (selectedUser) {
-                document.getElementById(selectedUser).classList.add("active");
-              }
-            });
-          })
-          .catch((error) =>
-            console.error("Error al obtener los datos:", error)
-          );
-      });
     </script>
-  </body>
+</body>
 </html>
