--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                                         <th>Medida</th>
                                         <th>Nombre</th>
                                         <th>Cantidad</th>
+                                        <th>Precio</>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -77,6 +78,7 @@
                                     <td>${item['Medida']}</td>
                                     <td>${item['Nombre']}</td>
                                     <td>${item['Cantidad']}</td>
+                                    <td>${item['Precio']}</td>
                                 </tr>
                             `;
                         });
